--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,20 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+
+    <canvas id="canvas" width="100%" height="100%"></canvas>
+    <script src="js/hovertreewelcome.js"></script>
+    <script src="js/bg_window.js"></script>
+    <style>
+      canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+      }
+    </style>
     <!-- built files will be auto injected -->
   </body>
 </html>
