--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,66 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -2;
+      }
+      body {
+        background-color: #242424;
+        margin: 0;
+        padding: 0;
+      }
+      
+      /* 设置浏览器滚动条样式 */
+      /* 浏览器滚动条样式 */
+      /* width */
+      ::-webkit-scrollbar {
+        width: 3px;
+        height: 3px;
+      }
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: #242424;
+        border-radius: 8px;
+      }
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: rgba(201, 201, 202, 0.5);
+        border-radius: 8px;
+      }
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        /* background: rgb(162, 162, 163); */
+        background: rgba(201, 201, 202, 0.5);
+        border-radius: 8px;
+      }
+    </style>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
 
     <canvas id="canvas" width="100%" height="100%"></canvas>
     <script src="js/hovertreewelcome.js"></script>
     <script src="js/bg_window.js"></script>
-    <style>
-      canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -2;
-      }
-    </style>
     <!-- built files will be auto injected -->
   </body>
 </html>
