--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
@@ -27,12 +28,15 @@
       /* 浏览器滚动条样式 */
       /* width */
       ::-webkit-scrollbar {
-        width: 3px;
-        height: 3px;
+        /* width: 3px;
+        height: 3px; */
+        width: 6px;
+        height: 6px;
       }
       /* Track */
       ::-webkit-scrollbar-track {
         background: #242424;
+        /* background: #fff; */
         border-radius: 8px;
       }
       /* Handle */
@@ -46,21 +50,22 @@
         background: rgba(201, 201, 202, 0.5);
         border-radius: 8px;
       }
-    </style>
+      </style>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
+      >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+      properly without JavaScript enabled. Please enable it to
+      continue.</strong
       >
     </noscript>
     <div id="app"></div>
-
+    
     <canvas id="canvas" width="100%" height="100%"></canvas>
     <script src="js/hovertreewelcome.js"></script>
     <script src="js/bg_window.js"></script>
+
     <!-- built files will be auto injected -->
   </body>
 </html>
