--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
     <script src="js/hovertreewelcome.js"></script>
     <script src="js/bg_window.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
