--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <script src="js/bg_window.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>
+      welcome to my website
+    </title>
     <style>
       canvas {
         position: fixed;
